added solution with loops and ifs